--- a/styles.css
+++ b/styles.css
@@ -105,12 +105,12 @@ nav ul li a:hover {
   background-color: #e60000;
 }
 
-/*about*/
-
+/* About Section */
 .about {
   display: flex;
   align-items: center;
   padding: 80px 0;
+  background-color: #070e16;
 }
 
 .about-content {
@@ -119,8 +119,6 @@ nav ul li a:hover {
   padding-right: 50px;
   color: #fff;
   margin-left: 5%;
-  
-  
 }
 
 .about h2 {
@@ -142,10 +140,6 @@ nav ul li a:hover {
   max-width: 100%;
   height: auto;
   border-radius: 5px;
-}
-
-.dark-theme {
-  background-color: #070e16;
 }
 
 
