--- a/menu-styles.css
+++ b/menu-styles.css
@@ -211,3 +211,39 @@ nav ul li a:hover {
             font-size: 16px;
             margin: 5px 0;
         }
+
+        /* Footer*/
+
+.footer {
+    background-color: #070e16;
+    padding: 40px 0;
+    color: #fff;
+    text-align: center;
+  }
+  
+  .footer-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
+  }
+  
+  .footer-logo img {
+    max-width: 150px;
+  }
+  
+  .footer-links a {
+    color: #fff;
+    margin: 0 10px;
+    text-decoration: none;
+  }
+  
+  .footer-social a {
+    color: #fff;
+    margin: 0 5px;
+    text-decoration: none;
+  }
+  
+  .footer-text {
+    font-size: 14px;
+  }
